--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,21 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+.menu {
+  display: flex;
+  list-style-type: none;
+  justify-content: flex-end;
+}
+
+.menu li {
+  margin: 0 10px;
+  cursor: pointer;
+}
+
+.button {
+ display: inline-block;
+ color: white;
+ text-decoration: none;
+}
